# empenhos_IFC

./: .gitignore  Apresentação.py  CIENCIA_DE_DADOS_TIME.ipynb  Dockerfile  Procfile  README-vuetify.md  README.md  app.py  app2.py  docker-compose.yml  home.py  package.json  pyproject.toml  requirements.txt  tempos_carregamento.csv  test.py  try01_nested.py  utils.py  vite.config.mjs
assets/csv/: a_liquidar.csv  a_liquidar_delete.csv  pagos.csv
assets/xl/: empenhos.csv
assets/xls/: empenhos-June.csv  empenhos.csv  empenhos.xlsx
classes/: dataframe_manager.py
components/: by_month.py  by_month2.py  by_nature.py  by_nature_details.py  by_nature_details_month.py  by_nature_graph.py  indicators.py  main_chart.py  main_graph.py  main_table.py  nature_all.py  select_if.py  tabs_child_graph.py  tabs_child_table.py  tabs_childrens.py  tabs_container.py  turn_dataframes.py  turn_graphs.py
old_server/: home.py  requirements.txt
old_server/components/: by_month.py  main_chart.py
old_vuetify/: settings.scss
old_vuetify/components/: ChartExample.vue  ChartExample2.vue  GlobalIndicators.vue  HeaderComp.vue
pages/: 0_Empenhos_Pagos.py  1_Empenhos_Liquidar.py  dados_brutos.py  home_(beta).py
pages/old_pages/: Apresentação.py
server/: Dockerfile  README.md  charts.py  main.py  requirements.txt  utils.py
server/components/: nature_all.py
server/csv/: campus_araquari.csv
testes/: by_nature.py
tests/: 1_Empenhos_Liquidar.py  alta.py  main_dataframe.py  main_graph.py  main_graph_natureza.py  nested.py  nested_pie.py  pie.py  teste.py  try01.py
(+17 files in other folders)
