[project]
name = "fabricaBI_IFC"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "=", email = "="},
]
dependencies = [
    "numpy>=1.24.4",
    "pandas>=2.0.3",
    "pydeck>=0.8.0",
    "streamlit>=1.32.2",
    "matplotlib>=3.7.5",
    "plotly>=5.20.0",
    "scikit-learn>=1.3.2",
]
requires-python = "==3.8.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
